# msu_asm

./: CMakeLists.txt  README.md  funcs.h  functions.asm  main.c  newton.c  newton.h  simpson.c  simpson.h  wrappers.c
docs/: ia32_amd64_comparison.md  msu_asm_report.md
